[package]
name = "bson-transcoder"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22"
bson = { version = "3.1", features = ["serde"] }
chrono = "0.4"
itoa = "1.0"
ryu = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-transcode = "1.1"
thiserror = "1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "transcoder_bench"
harness = false
