[package]
name = "materialize-kafka"
version = "0.1.0"
edition = "2021"

[dependencies]
doc = { git = "https://github.com/estuary/flow" }
proto-flow = { git = "https://github.com/estuary/flow" }
tuple = { git = "https://github.com/estuary/flow" }
json = { git = "https://github.com/estuary/flow" }
avro = { git = "https://github.com/estuary/flow" }

serde_json = "1.0"
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "time",
] }
rdkafka = { version = "0.36", features = [
    "cmake-build",
    "sasl",
    "ssl",
    "zstd",
] }
serde = { version = "1.0", features = ["derive"] }
schemars = "0.8"
base64 = "0.22"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
apache-avro = { version = "0.17" }
bytes = "1.8"
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
prost = "0.13"

[dev-dependencies]
insta = { version = "1", features = ["json", "serde"] }
time = "0.3"
bigdecimal = "0.4"

