[tool.poetry]
name = "materialize-test"
version = "0.1.0"
description = ""
authors = ["Will Baker <wbaker@gmail.com>"]

[tool.poetry.dependencies]
estuary-cdk = { path = "../estuary-cdk", develop = true }
pydantic = "^2"
python = "^3.12"
msgspec = "^0.18.6"
isal = "^1.6.1"
pybase64 = "^1.3.2"
uvloop = "^0.19.0"
line-profiler = "^4.1.3"
aiofile = "^3.8.8"
aiofiles = "^24.1.0"
orjson = "^3.10.5"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
