[tool.poetry]
name = "common"
version = "0.1.0"
description = ""
authors = ["Joseph Shearer <joseph@estuary.dev>", "Johnny Graettinger <johnny@estuary.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
jsonlines = "^4.0.0"
mypy = "^1.5"
orjson = "^3.9.7"
pydantic = "1.10.12"
python = "^3.11"
requests = "^2.31.0"
types-requests = "^2.31.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
