[tool.poetry]
name = "flow-sdk"
version = "0.1.4"
description = ""
authors = ["Joseph Shearer <joseph@estuary.dev>", "Johnny Graettinger <johnny@estuary.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
jsonlines = "^4.0.0"
mypy = "^1.5"
orjson = "^3.9.7"
pydantic = "^2.4"
python = "<3.12,>=3.11"
requests = "^2.31.0"
types-requests = "^2.31"
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
