[tool.poetry]
name = "source-airtable-estuary"
version = "0.1.0"
description = ""
authors = ["Joseph Shearer <joseph@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "0.51.14"
mypy = "^1.5"
python = ">=3.11,<3.12"
debugpy = "^1.8.0"
source_airtable = { path = "source_airtable", develop=true }
flow-sdk = {path="../python", develop=true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"