[tool.poetry]
name = "source_airtable"
version = "0.1.0"
description = ""
authors = ["Joseph Shearer <joseph@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "^0.52"
estuary-cdk = {path="../estuary-cdk", develop = true}
python = "^3.11"
types-requests = "^2.31"
aiohttp = ">=3.10.11"
pycares = ">=4.9.0"
requests = ">=2.32.4"
urllib3 = ">=2.5.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"