[tool.poetry]
name = "source_azure_servicebus"
version = "0.1.0"
description = "Estuary Flow native capture connector for Azure Service Bus"
authors = ["Wiom <saumya.kumar@wiom.in>"]

[tool.poetry.dependencies]
python = "^3.11"
estuary-cdk = {path = "../estuary-cdk", develop = true}
pydantic = "^2"
azure-servicebus = "^7.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
