[tool.poetry]
name = "source-bing-ads-estuary"
version = "0.1.0"
description = ""
authors = ["Jonathan Wihl <jonathan@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "0.51.14"
pendulum = "^3.0.0"
mypy = "^1.5"
python = "^3.11"
debugpy = "^1.8.0"
source_bing_ads = { path = "source_bing_ads", develop=true }
flow-sdk = {path="../python", develop=true}
ipython = "^8.19.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
