[tool.poetry]
name = "source-bing-ads-estuary"
version = "0.1.0"
description = ""
authors = ["Jonathan Wihl <jonathan@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "0.51.14"
python = "<3.12,>=3.11"
debugpy = "^1.8.0"
source_bing_ads = { path = "source_bing_ads", develop=true }
flow-sdk = {path="../python", develop=true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
