[tool.poetry]
version = "0.1.0"
name = "source_braintree_native"
description = ""
authors = ["Alex Bair <alexb@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = {path="../estuary-cdk", develop = true}
pydantic = "^2"
python = "^3.12"
braintree = "^4.28.0"
aiohttp = ">=3.11.10"
pycares = ">=4.9.0"
requests = ">=2.32.4"
urllib3 = ">=2.5.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"