[tool.poetry]
version = "0.1.0"
name = "source-brevo"
description = "Source implementation for brevo."
authors = [ "Jonathan Wihl <jonathan@estuary.dev>",]

[tool.poetry.dependencies]
airbyte-cdk = "^6.6.3"
estuary-cdk = {path="../estuary-cdk", develop = true}
python = ">=3.11,<3.13"
pydantic = "^2"
pytz = "^2024.1"
requests-futures = "^1.0.1"
setuptools = ">=78.1.1"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
freezegun = "^1.4.0"
pendulum = "2.0.0"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
source-brevo = "source_brevo.run:run"

