[tool.poetry]
version = "0.1.0"
name = "source-claude-admin-api"
description = "Estuary Flow source connector for the Anthropic Claude Admin API"
authors = ["CorrDyn"]

[tool.poetry.dependencies]
estuary-cdk = {path="../estuary-cdk", develop = true}
python = "^3.11"
pydantic = "^2"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"
pytest-asyncio = "^0.23"
pyyaml = "^6.0"

[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
