[tool.poetry]
name = "source-criteo-estuary"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "<3.12,>=3.11"
singer-sdk = "^0.33.0"
flow-sdk = {path="../python", develop=true}
tap-criteo = { path = "source_criteo", develop=true }
debugpy = "^1.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"
pre-commit = "^3.7.0"
ruff = "^0.3.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
