[tool.poetry]
name = "source-datadog"
version = "0.1.0"
description = ""
authors = ["Justin Smith <justin@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = { path = "../estuary-cdk", develop = true }
python = "^3.11"
pydantic = "^2"
nltk = "^3.9.1"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
