[tool.poetry]
version = "0.1.0"
name = "source_dynamics_365_finance_and_operations"
description = ""
authors = ["Alex Bair <alexb@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = {path="../estuary-cdk", develop = true}
python = "^3.12"
pydantic = "^2"
async-lru = "^2.0.5"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^8.3.4"
pytest-insta = "^0.3.0"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "strict"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
