[tool.poetry]
name = "source_facebook_marketing_native"
version = "0.1.0"
description = ""
authors = ["Justin Smith <justin@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = { path = "../estuary-cdk", develop = true }
pydantic = "^2"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^8.3.4"
pytest-insta = "^0.3.0"
types-python-dateutil = "^2.9.0.20251008"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
