[tool.poetry]
name = "source_facebook_marketing_native"
version = "0.1.0"
description = ""
authors = ["Justin Smith <justin@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = { path = "../estuary-cdk", develop = true }
pydantic = "^2"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^8.3.4"
pytest-insta = "^0.3.0"
types-python-dateutil = "^2.9.0.20251008"
pytest-mock = "^3.15.1"
pytest-asyncio = "^1.3.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "WARNING"
log_cli_format = "%(asctime)s [%(levelname)s] %(name)s: %(message)s"
log_cli_date_format = "%H:%M:%S"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
