[tool.poetry]
name = "source_google_ads"
version = "0.1.0"
description = ""
authors = ["Jonathan Wihl <jonathan@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "^0.52"
estuary-cdk = {path="../estuary-cdk", develop = true}
freezegun = "^1.4.0"
google-ads = "^23.1.0"
python = ">=3.11,<3.13"
types-requests = "^2.31"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.2.0"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
pre-commit = "^3.7.0"
ruff = "^0.3.4"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

