[tool.poetry]
name = "source-google-analytics-data-api"
version = "0.1.0"
description = ""
authors = ["Luishfs <luish1980@hotmail.com>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
estuary-cdk = {path="../estuary-cdk", develop = true}
airbyte-cdk = "0.51.14"
pendulum = "^3.0.0"
cryptography = "==37.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"
PyJWT = "==2.8.0"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
debugpy = "^1.8.0"
freezegun = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"