[package]
name = "source-http-ingest"
version = "0.1.0"
edition = "2021"


[dependencies]
doc = { git = "https://github.com/estuary/flow", branch = "johnny/more-sql" }
json = { git = "https://github.com/estuary/flow", branch = "johnny/more-sql" }
proto-flow = { git = "https://github.com/estuary/flow", branch = "johnny/more-sql" }

anyhow = "1.0.69"
async-trait = "0.1.64"
axum = "0.6.7"
futures = "0.3.26"
http = "0.2.9"
schemars = "0.8.11"
serde = "1.0.152"
serde_json = { version = "1.0.93", features = ["raw_value", "arbitrary_precision"] }
tokio = { version = "1.25.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter", "time"] }
url = "2.3.1"
utoipa = { version = "3.0.3", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "3.0.2", features = ["axum"] }
time = { version = "0.3.20", features = ["formatting"] }
uuid = { version = "1.3.0", features = ["v4"] }
lazy_static = "1.4.0"

[dev-dependencies]
insta = { version = "1.28.0", features = ["json", "serde"] }
reqwest = { version = "0.11.14", default_features = false, features = ["json", "blocking"] }

