[package]
name = "source-http-ingest"
version = "0.1.0"
edition = "2021"


[dependencies]
allocator = { git = "https://github.com/estuary/flow" }
doc = { git = "https://github.com/estuary/flow" }
json = { git = "https://github.com/estuary/flow" }
models = { git = "https://github.com/estuary/flow" }
proto-flow = { git = "https://github.com/estuary/flow", features = [
    "generate",
] }

anyhow = "1.0"
axum = "0.8"
bytes = "1"
futures = "0.3"
http = "1.0"
itertools = "0.13"
schemars = "0.8"
serde = "1.0"
serde_json = { version = "1.0", features = ["raw_value", "float_roundtrip"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "time",
] }
url = "2.5"
utoipa = { version = "5.4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0", features = ["axum"] }
time = { version = "0.3", features = ["formatting"] }
uuid = { version = "1.7", features = ["v4"] }
lazy_static = "1.4"
tower-http = { version = "0.5", features = [
    "decompression-full",
    "trace",
    "cors",
] }
tower = "0.4"

[dev-dependencies]
insta = { version = "1.28", features = ["json", "serde"] }
reqwest = { version = "0.11", default_features = false, features = [
    "json",
    "blocking",
] }
