[tool.poetry]
name = "source_hubspot_native"
version = "0.1.0"
description = ""
authors = ["Johnny Graettinger <johnny@estuary.dev>"]

[tool.poetry.dependencies]
estuary-cdk = {path="../estuary-cdk", develop = true}
pydantic = "^2"
python = "^3.12"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
jsonschema = "^4"
mypy = "^1.8.0"
pytest = "^8.3.4"
pytest-asyncio = "^0.25.1"
pytest-insta = "^0.3.0"

[tool.ruff]
target-version = "py312"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
