[tool.poetry]
name = "source-hubspot-estuary"
version = "0.1.0"
description = ""
authors = ["Flavio Riper <flavio@estuary.dev>"]

[tool.poetry.dependencies]
airbyte-cdk = "0.51.14"
mypy = "^1.5"
python = ">=3.11,<3.12"
debugpy = "^1.8.0"
source_hubspot = { path = "source_hubspot", develop = true }
flow-sdk = { path = "../python", develop = true }
pytest = "^7.4.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"