[tool.poetry]
name = "source-hubspot"
version = "0.1.0"
description = ""
authors = ["Johnny Graettinger <johnny@estuary.dev>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flow-sdk = {path="../python", develop=true}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"