[tool.poetry]
name = "source-hubspot"
version = "0.1.0"
description = ""
authors = ["Johnny Graettinger <johnny@estuary.dev>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
flow-sdk = {path="../python", develop=true}
airbyte-cdk = "0.51.14"
backoff = "^1.11"
pendulum = "^3.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-insta = "^0.2.0"
mock = "^5.1.0"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
debugpy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"