[package]
name = "source-kafka"
version = "0.1.0"
edition = "2021"

[lib]
doctest = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto-flow = { git = "https://github.com/estuary/flow", version = "0.0.0" }

chrono = { version = "0.4.19", features = ["serde"] }
anyhow = "1.0.75"
eyre = "0.6.5"
base64 = "0.21.5"
highway = "0.6.4"
http = "*"
aws-sdk-iam = "1.7.0"
aws-smithy-runtime-api = "1.1.1"
aws-sigv4 = { version = "1.1.1", features = ["sign-http", "http0-compat"] }
rdkafka = { version = "0.36", features = ["cmake-build", "gssapi", "libz", "sasl", "ssl"], default-features = false }
#rdkafka = { version = "0.36", features = ["dynamic-linking", "gssapi", "libz", "sasl", "ssl"], default-features = false }
#sasl2-sys = { version = "0.1.14", features = ["vendored" ] }
reqwest = { version = "0.11.22", features = ["json", "blocking"] }
schemars = "0.8.3"
serde = { version = "1.0.96", features = ["derive"] }
serde_json = "1.0.96"
serde_with = { version = "1.9.4", features = [ "hex", "macros" ] }
structopt = "0.3.22"
thiserror = "1.0.26"
tracing = "0.1.25"
tracing-subscriber = "0.2.19"

[dev-dependencies]
insta = { version = "1.8.0", features = ["redactions", "yaml"] }
