[package]
name = "source-kafka"
version = "0.1.0"
edition = "2021"


[dependencies]
proto-flow = { git = "https://github.com/estuary/flow" }

anyhow = "1.0"
aws-sdk-iam = "1.48.0"
aws-sigv4 = { version = "1.2.4", features = ["sign-http", "http0-compat"] }
base64 = "0.22"
hex = "0.4"
highway = "1.2"
http = "0.2" # 0.2x version is needed for MSK token signing via aws-sigv4
lazy_static = "1.5"
rdkafka = { version = "0.36", features = ["cmake-build", "sasl", "ssl"] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "time",
] }


[dev-dependencies]
insta = { version = "1", features = ["json", "serde"] }
