[package]
name = "source-kafka"
version = "0.1.0"
edition = "2021"


[dependencies]
doc = { git = "https://github.com/estuary/flow" }
json = { git = "https://github.com/estuary/flow" }
proto-flow = { git = "https://github.com/estuary/flow" }

anyhow = "1.0"
aws-sdk-iam = "1.48.0"
aws-sigv4 = { version = "1.2.4", features = ["sign-http", "http0-compat"] }
base64 = "0.22"
hex = "0.4"
highway = "1.2"
http = "0.2" # 0.2x version is needed for MSK token signing via aws-sigv4
lazy_static = "1.5"
rdkafka = { version = "0.36", features = [
    "cmake-build",
    "sasl",
    "ssl",
    "zstd",
] }
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "json",
    "env-filter",
    "time",
] }
reqwest = { version = "0.12", features = ["json"] }
futures = "0.3"
apache-avro = "0.19"
bigdecimal = "0.4"
time = "0.3"
prost-reflect = { version = "0.14", features = ["serde"] }
prost-types = "0.13"


[dev-dependencies]
insta = { version = "1", features = ["json", "serde"] }
schema_registry_converter = { version = "4.2.0", features = ["avro", "json"] }
serial_test = "3"
uuid = "1.11"
async-trait = "0.1"
prost = "0.13"

[patch.'crates-io']
# TODO: Remove patch after next apache-avro release (>0.19.0)
# Using git commit to get fix for bigdecimal feature regression where apache-avro
# incorrectly depended on "serde-json" instead of "serde" feature
apache-avro = { git = "https://github.com/apache/avro-rs.git", rev = "0c38f3f" }
