[tool.poetry]
name = "source_linkedin_ads_v2"
version = "0.1.0"
description = ""
authors = ["Luis Salomao <luish1980@hotmail.com>"]

[tool.poetry.dependencies]
airbyte-cdk = "^0.52"
estuary-cdk = {path="../estuary-cdk", develop = true}
python = "^3.11"
types-requests = "^2.31"
pydantic = "1.10.14"
urllib3 = ">=2.2.2"
pycares = ">=4.9.0"
jinja2 = ">=3.1.5"
aiohttp = ">=3.10.0"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.0"
mypy = "^1.8.0"
pytest = "^7.4.3"
pytest-insta = "^0.3.0"
requests-mock = "^1.11.0"
pytest-mock = "^3.12.0"
mock = "^5.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"